# thinkthread

./: .coverage  .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  LLM_INTEGRATION_SUMMARY.md  README.md  SDK_GUIDE.md  benchmark.py  demo_with_llm.py  enhanced_benchmark.py  example.py  formatting_and_testing_report.md  mkdocs.yml  patched_benchmark.py  pyproject.toml  simple_benchmark.py  test_anthropic.py  test_anthropic_advanced.py  test_anthropic_basic.py  test_integration_simple.py  test_llm_integration.py  test_openai_advanced.py  test_openai_basic.py  test_real_usecases.py  test_reasoning_modes.py  test_sdk.py
cort_sdk/: __main__.py  cli.py  config.py  cort_session.py  evaluation.py  prompting.py
docs/: 10x_implementation_plan.md  README.md  architecture_diagram.md  cli_reference.md  comparison.md  configuration_reference.md  developer_guide.md  improvement_roadmap.md  index.md  performance_optimization.md  tree_thinker.md  usage_guide.md
examples/: README.md  basic_qa_local.py  cli_tot_test.py  cort_demo.py  creative_ideation_anthropic.py  recursive_refinement_openai.py  tree_thinker_example.py  tree_thinker_test.py
tests/: __init__.py  test_anthropic.py  test_anthropic_advanced.py  test_anthropic_basic.py  test_anthropic_client.py  test_async.py  test_async_stream.py  test_cli.py  test_concurrent.py  test_config.py  test_config_extended.py  test_cort_session.py  test_dummy_llm.py  test_evaluator.py  test_hf_client.py  test_llm_client.py  test_llm_providers.py  test_openai_advanced.py  test_openai_basic.py  test_openai_client.py  test_openai_streaming.py  test_optimization.py  test_pairwise_evaluation.py  test_performance.py  test_prompt_templates.py  test_prompting.py  test_reasoning_loop.py  test_sdk.py  test_self_evaluation.py  test_session.py  test_strategies.py  test_template_integration.py  test_tree_thinker.py
(+79 files in other folders)
