[tool.poetry]
name = "cort_sdk"
version = "0.1.0"
description = "SDK for interacting with CORT services"
authors = ["Tomas Cupr <work@tomcupr.com>"]
readme = "README.md"
packages = [{include = "cort_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
pydantic = "^2.5.0"
openai = "^1.0.0"
anthropic = "^0.8.0"
requests = "^2.31.0"
jinja2 = "^3.1.6"
aiohttp = "^3.11.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = {version = "^0.21.0", python = ">=3.9"}
aiohttp = "^3.11.18"
ruff = "^0.11.9"

[tool.poetry.scripts]
cort = "cort_sdk.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
