[tool.poetry]
name = "thinkthread"
version = "0.7.1"
description = "ThinkThread SDK for enhanced LLM responses using unified reasoning framework"
authors = ["Tomas Cupr <work@tomcupr.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "thinkthread_sdk", from = "."}]
include = ["thinkthread_sdk/prompts/*.j2"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "==0.9.0"
pydantic = "^2.5.0"
openai = "^1.0.0"
anthropic = "^0.8.0"
requests = "^2.31.0"
jinja2 = "^3.1.6"
aiohttp = "^3.11.18"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = {version = "^0.21.0", python = ">=3.9"}
aiohttp = "^3.11.18"
ruff = "^0.11.9"
black = "^25.1.0"

[tool.poetry.scripts]
thinkthread = "thinkthread_sdk.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
